--- a/default.hbs
+++ b/default.hbs
@@ -16,16 +16,53 @@
 
     {{! Styles'n'Scripts }}
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic|Open+Sans:700,400" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Noto%2BSerif%3A400%2C700%2C400italic%7COpen%2BSans%3A700%2C400" />
+    <script type="text/javascript" src="/assets/js/instafeed.min.js"></script>
+
 
     {{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
 </head>
 <body class="{{body_class}}">
+    {{! The big featured header on the homepage, with the site logo and description }}
+    <header class="site-head" {{#if @blog.cover}}style="background-image: url({{@blog.cover}})"{{/if}}>
+        <div class="vertical">
+            <div class="site-head-content inner">
+                {{#if @blog.logo}}<a class="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="Blog Logo" /></a>{{/if}}
+                <h1 class="blog-title">{{@blog.title}}</h1>
+                <h2 class="blog-description">{{@blog.description}}</h2>
+            </div>
+        </div>
+    </header>
+    <nav class="blog-navigation">
+      <div class="addthis_toolbox addthis_32x32_style addthis_default_style">
+      <a class="addthis_button_facebook_follow" addthis:userid="adablitzkrieg"></a>
+      <a class="addthis_button_twitter_follow" addthis:userid="bangpowwww"></a>
+      <a class="addthis_button_linkedin_follow" addthis:userid="adablitzkrieg"></a>
+      <a class="addthis_button_google_follow" addthis:userid="+AdaBlitzkrieg"></a>
+      <a class="addthis_button_pinterest_follow" addthis:userid="bangpowwww"></a>
+      <a class="addthis_button_instagram_follow" addthis:userid="bangpowwww"></a>
+      </div>
+      <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-50b28d13455aee5e"></script>
+      <ul>
+        <li><a href="/">Blog</a></li>
+        <li><a href="/freelance">Freelance</a></li>
+        <li><a href="/books">Books</a></li>
+        <li><a href="/contact">Contact</a></li>
+      </ul>
+    </nav>
+    <nav class="blog-sidebar">
+      <!-- AddThis Follow BEGIN -->
+      <div class="books">
+      <a href="/dackelkrieg"><img alt="Dackelkrieg" src="/content/images/2014/Mar/dackelblitz_400_0.jpg" /></a>
+      <a href="/die-strenge"><img alt="Die Strenge" src="/content/images/2014/Mar/strenge.jpg" /></a>
+      </div>
+<!-- SnapWidget -->
+      <div id="instafeed"></div>
+    </nav>
 
     {{! Everything else gets inserted here }}
     {{{body}}}
-
     <footer class="site-footer">
         <a class="subscribe icon-feed" href="{{@blog.url}}/rss/"><span class="tooltip">Subscribe!</span></a>
         <div class="inner">
@@ -40,6 +77,25 @@
     {{! The main JavaScript file for Casper }}
     <script type="text/javascript" src="{{asset "js/jquery.fitvids.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
+    <script type="text/javascript">
+    function loadInstafeed() {
+        if (window.innerWidth > 500)  {
+            if (feed != null) {
+              return
+            }
+            var feed = new Instafeed({
+                get: 'user',
+                userId: 9452038,
+                accessToken: '9452038.467ede5.72a8227fa9484d80831d9d81d1dad0cc',
+                limit: 8
+            });
+            feed.run();
+        }
+    }
 
+    var feed = null
+    loadInstafeed()
+    window.onresize = loadInstafeed
+    </script>
 </body>
 </html>
