--- a/index.hbs
+++ b/index.hbs
@@ -15,7 +15,7 @@
 
         </header>
         <section class="post-excerpt">
-            <a href="{{url}}">{{content words="20"}}</a>
+            <a href="{{url}}">{{content words="15"}}&hellip;</a>
         </section>
     </article>
 
