--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -225,7 +225,7 @@ a {
 }
 
 a:hover {
-    color: #57A3E8;
+    color: #00F;
 }
 
 h1 a, h2 a, h3 a,
@@ -495,7 +495,7 @@ margin on the iframe, cause it breaks stuff. */
     font-family: 'Open Sans', sans-serif;
     word-spacing: 3rem;
     padding: 1rem;
-    font-size: 2.5rem;
+    font-size: 1.5rem;
     line-height: 32px;
 }
 
@@ -536,7 +536,6 @@ margin on the iframe, cause it breaks stuff. */
 .content {
     margin-left: auto;
     margin-right: auto;
-    margin-top: 5rem;
     width: 80%;
     max-width: 700px;
     padding: 1rem;
@@ -550,18 +549,19 @@ margin on the iframe, cause it breaks stuff. */
 .post {
     position: relative;
     width:20%;
-    float: left;
+/*    float: left; */
     padding: 1rem;
 /*    margin: 4rem auto;
     padding-bottom: 4rem; */
     word-break: break-word;
     hyphens: auto;
+    -moz-hyphens: auto;
     overflow: hidden;
 }
 
 .index .post {
     display: inline-block;
-    height: 400px;
+  /*  height: 400px; */
  }
 
 .index .post a {
@@ -588,14 +588,20 @@ margin on the iframe, cause it breaks stuff. */
 }
 
 .post-title {
-    margin:0;
+    margin: 0;
+    margin-bottom: 1rem;
 }
 
 .post-title a {
     text-decoration: none;
 }
 
+.post-excerpt {
+    text-align: justify;
+}
+
 .post-excerpt p {
+    display: inline;
     margin: 0.5rem 0 0 0;
     font-size: 0.9em;
     line-height: 1.6em;
@@ -603,6 +609,11 @@ margin on the iframe, cause it breaks stuff. */
 
 .post-excerpt img {
     width: 100%;
+}
+
+.post-excerpt h1, h2, h3,
+h4, h5, h6 {
+    font-size: 1em;
 }
 
 .post-meta {
@@ -698,6 +709,10 @@ margin on the iframe, cause it breaks stuff. */
 .post-template .blog-title {
     display: inline-block;
     padding: 2.5rem 0;
+}
+
+.post-content {
+    text-align: justify;
 }
 
 /* Keep images centred and within the bounds of the post-width */
@@ -824,7 +839,10 @@ margin on the iframe, cause it breaks stuff. */
     width: 80%;
     max-width: 700px;
     margin: 4rem auto;*/
-    clear: both;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
     font-family: 'Open Sans', sans-serif;
     font-size: 1.3rem;
     color: #9EABB3;
@@ -989,7 +1007,7 @@ margin on the iframe, cause it breaks stuff. */
 @media only screen and (max-width: 1200px) {
 
   .post {
-      width: 25%
+      width: 25%;
   }
 
 }
@@ -1059,7 +1077,6 @@ margin on the iframe, cause it breaks stuff. */
     }
     .blog-navigation .addthis_toolbox {
         position: inherit;
-        display: block-inline;
         float: left;
     }
     .blog-sidebar {
@@ -1089,8 +1106,12 @@ margin on the iframe, cause it breaks stuff. */
         margin-right: 16px;
     }
 
+    .index .post {
+        height: auto;
+    }
+
     .post {
-        width:auto;
+        width: auto;
         margin-left: 16px;
         margin-right: 16px;
         font-size: 0.8em;
@@ -1111,17 +1132,17 @@ margin on the iframe, cause it breaks stuff. */
 
 
     h1, h2 {
-        font-size: 3rem;
+        font-size: 2.5rem;
         line-height: 1.1em;
         letter-spacing: -1px;
     }
 
     h3 {
-        font-size: 2.8rem;
+        font-size: 2.3rem;
     }
 
     h4 {
-        font-size: 2.3rem;
+        font-size: 2rem;
     }
 
     .post-template .post {
