--- a/default.hbs
+++ b/default.hbs
@@ -16,8 +16,9 @@
 
     {{! Styles'n'Scripts }}
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Noto%2BSerif%3A400%2C700%2C400italic%7COpen%2BSans%3A700%2C400" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic|Open+Sans:700,400" />
     <script type="text/javascript" src="/assets/js/instafeed.min.js"></script>
+    <script type="text/javascript" src="/assets/js/masonry.pkgd.min.js"></script>
 
 
     {{! Ghost outputs important style and meta data with this tag }}
@@ -42,6 +43,7 @@
       <a class="addthis_button_google_follow" addthis:userid="+AdaBlitzkrieg"></a>
       <a class="addthis_button_pinterest_follow" addthis:userid="bangpowwww"></a>
       <a class="addthis_button_instagram_follow" addthis:userid="bangpowwww"></a>
+      <a class="addthis_button_compact" href="https://soundcloud.com/bangpowwww"><img src="{{ asset "images/soundcloud_white_32.png" }}"></a>
       </div>
       <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-50b28d13455aee5e"></script>
       <ul>
@@ -78,12 +80,19 @@
     <script type="text/javascript" src="{{asset "js/jquery.fitvids.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
     <script type="text/javascript">
+    var container = document.querySelector('main.index');
+    var msnry = new Masonry( container, {
+      // options...
+      itemSelector: 'article.post'
+    });
+
+    var feed
     function loadInstafeed() {
         if (window.innerWidth > 500)  {
             if (feed != null) {
               return
             }
-            var feed = new Instafeed({
+            feed = new Instafeed({
                 get: 'user',
                 userId: 9452038,
                 accessToken: '9452038.467ede5.72a8227fa9484d80831d9d81d1dad0cc',
