--- a/post.hbs
+++ b/post.hbs
@@ -28,6 +28,14 @@
                         {{#if author.website}}<li><a href="{{author.website}}">{{author.website}}</a></li>{{/if}}
                     </ul>
                 </section>
+                <section class="flattr">
+                    <a class="FlattrButton" style="display:none;"
+                       title="{{title}}" data-flattr-uid="bangpowwww"
+                       data-flattr-tags="text,{{tags separator=","}}"
+                       data-flattr-category="text"
+                       data-flattr-button="compact"
+                       href="{{url absolute="true"}}">{{excerpt}}</a>
+                </section>
 
                 <section class="share">
                     <h4>Share this post</h4>
