--- a/default.hbs
+++ b/default.hbs
@@ -17,9 +17,21 @@
     {{! Styles'n'Scripts }}
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic|Open+Sans:700,400" />
+    <script type="text/javascript" src="//api.flattr.com/js/0.6/load.js?mode=auto"></script>
     <script type="text/javascript" src="/assets/js/instafeed.min.js"></script>
     <script type="text/javascript" src="/assets/js/masonry.pkgd.min.js"></script>
+    <script type="text/javascript" src="/assets/js/imagesloaded.pkgd.min.js"></script>
 
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    
+      ga('create', 'UA-22856766-2', 'auto');
+      ga('send', 'pageview');
+    
+    </script>
 
     {{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
@@ -80,10 +92,10 @@
     <script type="text/javascript" src="{{asset "js/jquery.fitvids.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
     <script type="text/javascript">
-    var container = document.querySelector('main.index');
-    var msnry = new Masonry( container, {
-      // options...
-      itemSelector: 'article.post'
+    var container = document.querySelector('main.index')
+    var msnry;
+    imagesLoaded(container, function() {
+      msnry = new Masonry(container, { itemSelector: 'article.post' })
     });
 
     var feed
